--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -28,15 +28,39 @@
     <header id="header"></header>
     <div id="slide"></div>
     <main id="mainContent">
-        <main class="d-flex flex-column min-vh-100">
+        <div class="ContenedorT">
             <!--contenedor de todo-->
+            <div class="ContenedorTitulo position-relative">
+                <h3 class="titillium-web-semibold textP">Comentarios</h3>
+                <div class="linea1"></div>
+            </div>
             <div class="container">
-                <!--div contenedor del texto de cliente y linea-->
-                <div
-                    class="row 2 col-sm-12 col-md-6 offset-md-3 col-lg-2 offset-lg-5 justify-content-center align-items-center">
-                    <h3 id="mainTitle mb-1" class="titillium-web-bold color-3blue line text-center my-4">Comentarios</h3>
+                <!--div contenedor del texto de comentarios y linea-->
+                <div class="contenidoP">
+                    <div class="rectanguloP z-0">
+                        <div class ="comentario mt-1">
+                            <div class ="ComentarioC">
+                        <h5 class = "comentarioT">Emilianito</h5> 
+                        <p class = "comentarioD">El mejor pollo, es del pollo campero!
+                        </p>
+                        </div>
+                         <div class="sizedbox"></div>
+                            <div class ="ComentarioC">
+                        <h5 class = "comentarioT">Emilianito</h5> 
+                        <p class = "comentarioD">El mejor pollo, es del pollo campero!
+                        </p>
+                        </div> 
+                        <div class="sizedbox"></div>
+                        <div class ="ComentarioC">
+                    <h5 class = "comentarioT">Emilianito</h5> 
+                    <p class = "comentarioD">El mejor pollo, es del pollo campero!
+                    </p>
+                    </div> 
+                    </div>
+                    
                 </div>
-        </main>
+            </div>
+        </div>
     </main>
     <footer id="footer"></footer>
 
@@ -44,7 +68,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
-    <script type="text/javascript" src="../../controlador/privado/cliente.js"></script>
+    <script type="text/javascript" src="../../controlador/privado/comentario.js"></script>
 </body>
 
 </html>
