--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -65,54 +65,54 @@
                             <div class="ContenedorForm">
                                 <form class="row needs-validation form1" novalidate>
                                     <div class="col-md-6">
-                                        <label for="validationCustom01" class="form-label">Nombres</label>
-                                        <input type="text" class="form-control" id="validationCustom01"
+                                        <label for="nombreInput" class="form-label">Nombres</label>
+                                        <input type="text" class="form-control" id="nombreInput"
                                             placeholder="Ingresa los nombres" required>
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="validationCustom02" class="form-label ">Apellidos</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="apellidosInput" class="form-label ">Apellidos</label>
+                                        <input type="text" class="form-control" id="apellidosInput"
                                             placeholder="Ingresa los apellidos" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">DUI</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="duiInput" class="form-label ">DUI</label>
+                                        <input type="text" class="form-control" id="duiInput"
                                             placeholder="Ingresa el dui" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">Teléfono</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="telefonoInput" class="form-label ">Teléfono</label>
+                                        <input type="text" class="form-control" id="telefonoInput"
                                             placeholder="Ingresa el número telefonico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">Correo Electronico</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="correoInput" class="form-label ">Correo Electronico</label>
+                                        <input type="text" class="form-control" id="correoInput"
                                             placeholder="Ingresa el correo electronico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">Fecha de Nacimiento</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
+                                        <input type="text" class="form-control" id="fechanInput"
                                             placeholder="Ingresa la fecha de nacimiento" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label">Fecha de Registro</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="fecharInput" class="form-label">Fecha de Registro</label>
+                                        <input type="text" class="form-control" id="fecharInput"
                                             placeholder="21/2/2024" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">Estado del
+                                        <label for="estadoInput" class="form-label ">Estado del
                                             Trabajador</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <input type="text" class="form-control" id="estadoInput"
                                             placeholder="Vigente" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">Nivel de Usuario</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="nivelInput" class="form-label ">Nivel de Usuario</label>
+                                        <input type="text" class="form-control" id="nivelInput"
                                             placeholder="Ingresa el nivel de usuario" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="validationCustom02" class="form-label ">Contraseña</label>
-                                        <input type="text" class="form-control" id="validationCustom02"
+                                        <label for="contraInput" class="form-label ">Contraseña</label>
+                                        <input type="text" class="form-control" id="contraInput"
                                             placeholder="Ingresa la contraseña" required>
                                     </div>
                                     <div class="contenedorBotones2">
@@ -127,9 +127,9 @@
                     </div>
                     <div class="tab-pane1 fade z-2 position-relative d-none" role="tabpanel" id="tabla"
                         aria-labelledby="tabla-tab">
-                        <div class="Contenedor-tabla z-3 mt-5">
+                        <div class="Contenedor-tabla z-3 mt-5 table-responsive">
                             <table class="table table-hover table-bordered" id="tablaTrabajadores">
-                                <thead>
+                                <thead class="thead">
                                     <tr>
                                         <th scope="col">ID</th>
                                         <th scope="col">Apellidos</th>
