--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -38,26 +38,36 @@
                 <!--div contenedor del texto de comentarios y linea-->
                 <div class="contenidoP">
                     <div class="rectanguloP z-0">
-                        <div class ="comentario mt-1">
-                            <div class ="ComentarioC">
-                        <h5 class = "comentarioT">Emilianito</h5> 
-                        <p class = "comentarioD">El mejor pollo, es del pollo campero!
-                        </p>
+                        <div class="comentario mt-1">
+                            <div class="ComentarioC">
+                                <a href="paginaxd" class="a">
+                                <h5 class="comentarioT">Emilianito</h5>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!
+                                </p>
+                            </a>
+                            </div>
+                            <div class="sizedbox"></div>
+                            <div class="ComentarioC">
+                                <h5 class="comentarioT">Emilianito</h5>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!
+                                </p>
+                            </div>
+                            <div class="sizedbox"></div>
+                            <div class="ComentarioC">
+                                <h5 class="comentarioT">Emilianito</h5>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!
+                                </p>
+                            </div>
+                            <div class="sizedbox"></div>
+                        <div class="ComentarioC">
+                            <h5 class="comentarioT">Emilianito</h5>
+                            <p class="comentarioD">El mejor pollo, es del pollo campero!
+                            </p>
                         </div>
-                         <div class="sizedbox"></div>
-                            <div class ="ComentarioC">
-                        <h5 class = "comentarioT">Emilianito</h5> 
-                        <p class = "comentarioD">El mejor pollo, es del pollo campero!
-                        </p>
-                        </div> 
-                        <div class="sizedbox"></div>
-                        <div class ="ComentarioC">
-                    <h5 class = "comentarioT">Emilianito</h5> 
-                    <p class = "comentarioD">El mejor pollo, es del pollo campero!
-                    </p>
-                    </div> 
+                        </div>
+                        
                     </div>
-                    
+
                 </div>
             </div>
         </div>
