--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -142,8 +142,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
+                                    <tr ondblclick="openDetails(this)">
+                                        <td>1</td>
                                         <td>Mejia Mendez</td>
                                         <td>Adriana Paola</td>
                                         <td>12345678-9</td>
@@ -151,8 +151,8 @@
                                         <td>correo@gmail.com</td>
                                         <td>Empleado</td>
                                     </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
+                                    <tr ondblclick="openDetails(this)">
+                                        <td>2</td>
                                         <td>Jacobo Hernandez</td>
                                         <td>Jacobo Emiliano</td>
                                         <td>09876543-2</td>
@@ -160,8 +160,8 @@
                                         <td>correo@gmail.com</td>
                                         <td>Empleado</td>
                                     </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
+                                    <tr ondblclick="openDetails(this)">
+                                        <td>3</td>
                                         <td>Gomez Martinez</td>
                                         <td>Fernando José</td>
                                         <td>36472893-0</td>
@@ -181,6 +181,77 @@
                     </div>
                 </div>
             </div>
+            <div class="modal fade" id="dataModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="modalTitle" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="modalTitle"></h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <!-- Formulario para crear o actualizar un registro -->
+                    <form id="updateFrom" name="updateFrom">
+                        <div class="modal-body row g-3">
+                            <!-- Campo oculto para asignar el id del registro al momento de modificar
+                            <input type="hidden" id="idTrabajador" name="IdTrabajador"> -->
+                            <div class="col-sm-12 col-md-6">
+                                <label for="nombreTrabajador" class="form-label">Nombres</label>
+                                <input id="nombreTrabajador" type="text" name="nombreTrabajador" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="apellidosTrabajador" class="form-label">Apellidos</label>
+                                <input id="apellidosTrabajador" type="text" name="apellidosTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="duiTrabajador" class="form-label">DUI</label>
+                                <input id="duiTrabajador" type="text" name="duiTrabajador" 
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="telefonoTrabajador" class="form-label">Teléfono</label>
+                                <input id="telefonoTrabajador" type="text" name="telefonoTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="correoTrabajador" class="form-label">Correo</label>
+                                <input id="correoTrabajador" type="text" name="correoTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="fechanTrabajador" class="form-label">Fecha de nacimiento</label>
+                                <input id="fechanTrabajador" type="text" name="fechanTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="fecharTrabajador" class="form-label">Fecha de registro</label>
+                                <input id="fecharTrabajador" type="text" name="fecharTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="estadoTrabajador" class="form-label">Estado</label>
+                                <input id="estadoTrabajador" type="text" name="estadoTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="nivelTrabajador" class="form-label">Nivel</label>
+                                <input id="nivelTrabajador" type="text" name="nivelTrabajador"
+                                    class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="contraTrabajador" class="form-label">Contraseña</label>
+                                <input id="contraTrabajador" type="text" name="contraTrabajador"
+                                    class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
         </div>
     </main>
     <footer id="footer"></footer>
